# GaussianSplatting

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
App/: App.cpp  App.h  Camera.cpp  Camera.h
Header/: Core.h
Loader/: PlyLoader.cpp  PlyLoader.h  SplatSet.h
Shaders/: proj.comp  rast.comp  sort.comp
Vulkan/: Buffer.cpp  Buffer.h  CommandManager.cpp  CommandManager.h  ComputePass.h  ComputePipeline.cpp  ComputePipeline.h  Context.cpp  Context.h  Pipeline.cpp  Pipeline.h  ProjectionPass.cpp  ProjectionPass.h  RasterPass.cpp  RasterPass.h  Renderer.cpp  Renderer.h  SortPass.cpp  SortPass.h  Swapchain.cpp  Swapchain.h  Vertex.h
docs/plans/: 2026-02-11-triangle-renderer-design.md  2026-02-15-orbit-camera-design.md  2026-02-15-orbit-camera-plan.md
